--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Login - Dashboard</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <title>ControlTechStock</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="refresh" content="0; url=dashboard.html">
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-  <div class="login-container">
-    <h2>Iniciar Sesión</h2>
-    <form id="loginForm">
-      <input type="text" id="usuario" placeholder="Usuario" required>
-      <input type="password" id="contrasena" placeholder="Contraseña" required>
-      <button type="submit">Ingresar</button>
-    </form>
-    <p id="mensaje"></p>
+  <div class="login-wrap">
+    <div class="login-card">
+      <h2>Redirigiendo…</h2>
+      <p class="subtle">Si no avanza, <a href="dashboard.html">clic aquí</a>.</p>
+    </div>
   </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
